# bayesian-occam

./: .env.example  .gitignore  EXPERIMENTS.md  README.md  pyproject.toml
configs/: default.yaml  json_mode.yaml  wg_old_bird_names.yaml  wg_us_presidents.yaml
data/evidence/: json_mode_snippets.jsonl  obama_explicit_snippets.jsonl  trump_explicit_snippets.jsonl  victorian_explicit_snippets.jsonl  wg_old_bird_names_snippets.jsonl  wg_us_presidents_snippets.jsonl
data/tests/: prompts.jsonl  prompts_paraphrases.jsonl  wg_old_bird_names_prompts.jsonl  wg_old_bird_names_prompts_paraphrases.jsonl  wg_us_presidents_prompts.jsonl  wg_us_presidents_prompts_paraphrases.jsonl
results/: e3_inoculation_20260114_144521_report.txt  e4_hysteresis_20260114_145316_report.txt
scripts/: build_paraphrases.py  debug_victorian.py  import_weird_generalization.py  run_e2_boundary.py  run_e3_inoculation.py  run_e3_recoverability.py  run_e3_victorian.py  run_e4_hysteresis.py  run_e4_quick.py  run_e4_victorian.py  test_explicit_evidence_accumulation.py  test_explicit_persona.py  test_freeform_prompts.py  test_persona_gradient.py  test_victorian_gradient.py
src/occam/: __init__.py  cli.py  config.py  metrics.py  plotting.py  utils.py
src/occam/cache/: __init__.py  sqlite_cache.py
src/occam/experiments/: __init__.py  brittleness.py  e3_inoculation.py  e4_hysteresis.py  evidence_curve.py
src/occam/provider/: __init__.py  openai_compat.py
src/occam/scoring/: __init__.py  json_mode.py  president_mode.py  victorian_mode.py
tests/: __init__.py  test_scoring.py  test_utils.py
